--- a/src/global.css
+++ b/src/global.css
@@ -6,14 +6,17 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: 'Baloo Thambi 2', cursive !important;
+    font-weight: 400;
 }
 
 body{
-    font-family: 'Baloo Thambi 2', cursive;
+    font-family: 'Baloo Thambi 2', cursive !important;
     font-weight: 400;
     background: #232931;
     -webkit-font-smoothing: antialiased;
 }
+
 
 .menuClicado{
     border-bottom: solid 2px #eeeeee;
